# C-pointer

./: CMakeLists.txt
part1/: SA-dynamic-call.c
part2/polytree-c/: integernode.c  integernode.h  loggingstringnode.c  loggingstringnode.h  node.c  node.h  polytree.c  reversestringnode.c  reversestringnode.h  stringnode.c  stringnode.h
part3/: list.c  trunc.c
part4/: p4.s
